# alerion_sim

./: .gitignore  README.md  SETUP.md
alerion_sim/: CMakeLists.txt  pyproject.toml
alerion_sim/config/: gz_server.config  simulation.yaml  validation.yaml
alerion_sim/config/levels/: development.yaml  full.yaml  minimal.yaml
alerion_sim/config/profiles/: hard_vision.yaml  lidar_scan.yaml  navigation.yaml  vision.yaml
alerion_sim/config/rviz/: development.rviz  full.rviz  lidar_scan.rviz  minimal.rviz
alerion_sim/config/sensors/: camera.yaml  lidar.yaml
alerion_sim/config/vehicle/: x500.yaml
alerion_sim/docker/: Dockerfile  docker-compose.nvidia.yml  docker-compose.override.yml  docker-compose.yml  fastdds_localhost.xml
alerion_sim/launch/: rviz.launch.py  simulation.launch.py  validation.launch.py
alerion_sim/logs/: alerion_compute.csv  alerion_validation.csv
alerion_sim/media/materials/scripts/: gazebo.material
alerion_sim/models/x500_inspection/: model.sdf.jinja
alerion_sim/scripts/: camera_distortion.py  drone_visualizer.py  gimbal_controller.py  odom_to_path.py  odom_to_tf.py  odom_to_vel_marker.py  validation_node.py  wind_turbulence.py
alerion_sim/worlds/: inspection.sdf.j2
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/alerion_sim/lib/alerion_sim/: gimbal_controller  validation_node
install/alerion_sim/share/alerion_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/alerion_sim/share/alerion_sim/cmake/: alerion_simConfig-version.cmake  alerion_simConfig.cmake
install/alerion_sim/share/alerion_sim/config/: simulation.yaml  validation.yaml
install/alerion_sim/share/alerion_sim/config/levels/: development.yaml  full.yaml  minimal.yaml
install/alerion_sim/share/alerion_sim/config/profiles/: hard_vision.yaml
install/alerion_sim/share/alerion_sim/config/sensors/: camera.yaml  lidar.yaml
install/alerion_sim/share/alerion_sim/config/vehicle/: x500.yaml
install/alerion_sim/share/alerion_sim/environment/: ament_prefix_path.dsv  path.dsv
install/alerion_sim/share/alerion_sim/launch/: simulation.launch.py  validation.launch.py
install/alerion_sim/share/alerion_sim/models/Warehouse/: model.config  model.sdf
install/alerion_sim/share/alerion_sim/models/Warehouse/meshes/: warehouse.dae  warehouse_colision.stl
install/alerion_sim/share/alerion_sim/models/x500_inspection/: model.sdf.jinja
install/alerion_sim/share/alerion_sim/worlds/: inspection.sdf.j2
install/alerion_sim/share/ament_index/resource_index/package_run_dependencies/: alerion_sim
install/alerion_sim/share/ament_index/resource_index/parent_prefix_path/: alerion_sim
log/: latest_build
